refactor: Fix deprecated APIs marked for removal